--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.2.30'
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:+'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
     }
 }
 
