--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:+'
+        classpath 'com.android.tools.build:gradle:3.2.+'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
     }
 }
