--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,9 +25,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-def keystorePropertiesFile = rootProject.file("key.properties")
-def keystoreProperties = new Properties()
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+// def keystorePropertiesFile = rootProject.file("key.properties")
+// def keystoreProperties = new Properties()
+// keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     compileSdkVersion 28
@@ -50,28 +50,19 @@ android {
     }
 
     // https://flutter.io/android-release/#signing-the-app
-    signingConfigs {
-        release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
-        }
-    }
+    // signingConfigs {
+    //     release {
+    //          keyAlias keystoreProperties['keyAlias']
+    //          keyPassword keystoreProperties['keyPassword']
+    //          storeFile file(keystoreProperties['storeFile'])
+    //          storePassword keystoreProperties['storePassword']
+    //     }
+    // }
 
     buildTypes {
         release {
-            signingConfig signingConfigs.release
-        }
-    }
-
-    // FIXME: workaround until Flutter supports FAT APKs & x86
-    splits {
-        abi {
-            enable true
-            reset()
-            include "arm64-v8a", "armeabi-v7a"
-            universalApk false
+            signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.release
         }
     }
 }
