--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.+'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.+"
     }
 }
 
